--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.link {
+  margin: 2rem;
+  font-size: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.home {
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about {
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+
 }
+.list {
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+
+}
+
+.list button {
+  width: 20rem;
+  height: 3rem;
+  margin: 3rem;
+  color: blue;
+  font-size: 1rem;
+}
+
